--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -186,7 +185,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
-            android:src="@drawable/Circle" />
+            android:src="@drawable/circle" />
 
         <ImageView
             android:layout_width="25dp"
@@ -206,7 +205,7 @@
             android:layout_toLeftOf="@id/circleG"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
-            android:src="@drawable/Circle" />
+            android:src="@drawable/circle" />
 
         <ImageView
             android:layout_width="25dp"
@@ -225,7 +224,7 @@
             android:layout_toLeftOf="@id/circleT"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
-            android:src="@drawable/Circle" />
+            android:src="@drawable/circle" />
 
         <ImageView
             android:layout_width="25dp"
